# voxer

./: 3x3x3.txt  Cargo.toml  LICENSE  README.md  run_wasm.bat  run_wasm.sh  test.txt
src/: main.rs
src/application/: bench.rs  gpu_bench.rs  gui.rs  mod.rs  render_context.rs
src/application/input/: mod.rs
src/application/shaders/: commons.wgsl  hashmap.wgsl  mod.rs  world.wgsl
src/application/world/: mod.rs  model.rs
src/utils/: config.rs  entropy  entropy.rs  fps_counter.rs  math.rs  mod.rs
vox/: colors.vox  yumenikki.vox
web/: index.css  index.html  index.js
