[package]
name = "voxer"
version = "0.1.0"
edition = "2021"

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
anyhow = "1.0.86"
wgpu = "0.20.1"
winit = "0.29.15"
bytemuck = { version = "1.16.1", features = ["derive"] }
dot_vox = "5.1.1"
nalgebra = { version = "0.33.0", features = ["bytemuck"] }
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = { version = "0.28.1", default-features = false, features = ["links", "wayland", "x11"] }
egui_plot = "0.28.1"
include-wgsl-oil = "0.2.8"
log = "0.4.26"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = "0.3.0"
env_logger = "0.11.3"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "*", features = ["js"] }
